# csharp-expr-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  csharp-expr-rs.sln  rustfmt.toml
csharp-expr-rs.Benchmarks/: CompilationBenchmark.cs  Program.cs  TinyExpressionBenchmark.cs  csharp-expr-rs.Benchmarks.csproj
src/: ast.rsss  expressions.rs  ffi.rs  functions.rs  lib.rs  lib.rsss  main.rs  main.rsss  main.rsssss  main.rssssss  parsing.rs
src-csharp/csharp-expr-rs/: .editorconfig  Expression.cs  ExpressionInvokeException.cs  ExpressionParsingException.cs  Native.cs  csharp-expr-rs.csproj
src/csharp-expr-rs/: CsharpExprLib.cs  Expression.cs
tests-csharp/csharp-expr-rs.Benchmarks/: Program.cs  TinyExpressionBenchmark.cs  csharp-expr-rs.Benchmarks.csproj
tests-csharp/csharp-expr-rs.ConsoleTests/: NativePassStringTests.cs  Program.cs  csharp-expr-rs.ConsoleTests.csproj
tests-csharp/csharp-expr-rs.ConsoleTests/Properties/: launchSettings.json
tests-csharp/csharp-expr-rs.Tests/: CsharpExprLibTests.cs  DatetimeBehaviourTests.cs  csharp-expr-rs.Tests.csproj
tests/csharp-expr-rs.ConsoleTests/: csharp-expr-rs.ConsoleTests.csproj
tests/csharp-expr-rs.Tests/: CsharpExprLibTests.cs  TinyPerfTest.cs  csharp-expr-rs.Tests.csproj
