[package]
name = "csharp-expr"
version = "0.1.0"
authors = ["Jêrome Rx <jerome+git@rouaix.eu>"]
edition = "2018"

[lib]
name="csharp_expr"
crate-type = ["dylib"]

[dependencies]
nom="5.1.2"
lazy_static = "1.4.0"
unescape = "0.1.0"
encoding_rs = "0.8.23"
once_cell = "1.4.0"
regex = "1"
num-format = "0.4.0" # when floating point formating will be here : https://github.com/bcmyers/num-format/issues/1
chrono = "0.4"
chrono-tz = "0.5.2"
unicase = "2.6.0"
rust_decimal = "1.7.0"
rust_decimal_macros = "1.7.0"
# cached = "0.18.0"

[dev-dependencies]
test-case = "1.0.0"
# flame = "0.2.2"
# flamer = "0.4.0"
